--- a/taxExpert/scss/style.scss
+++ b/taxExpert/scss/style.scss
@@ -5,7 +5,7 @@ body{
 .wrapper{
     max-width: 1280px;
     margin: auto;
-    width: 98%;
+    width: 97%;
 
 }
 
@@ -268,19 +268,18 @@ nav{
             letter-spacing: 0.01em;
         }
         .services-of{
-            margin-top: 50px;;
+            margin-top: 30px;
             display: flex;
             justify-content: space-between;
 
             .box{ 
             border: 1px solid #BDBDBD;
-            padding: 90px 60px;
+            padding: 60px 60px;
             margin: 3%;
             text-align: center;
             display: inline-block; 
             height: 180px;
-            width: 230px;
-
+            width: 180px;
                 i{
                     color: #8BC03F;
                     font-size: 2.5em;
@@ -535,38 +534,81 @@ nav{
         }
     }        
 }
-#testimonials{
-    width: 100%;
+
+.testimonials {
     font-family: "Ubuntu", Helvetica, Arial, sans-serif;
-    height: 600px; 
+    text-align: center;
 
-    .white{
-        background-color: white;
-        height: 200px;
-        position: relative;
 
-    }
-    .blue{
-            background-color: #1E3953;
-            height: 300px;
-    }
-
-    .wrapper{
-        width: 98%;
-
-        .t-container{ 
-            position: relative;
-
-            .test{
-
-            }
+    .top {
+        background:#FFFFFF;
+        margin:0;
+        padding:60px;
+        h4 {
+            font-size: 50px;
+            margin-bottom: 80px;
+            
         }
     }
 
+    .bottom {
+        position: relative;
+        background:#1E3953;
+        padding:120px;
+        padding-bottom: 220px;
+        text-align: center;
+
+        .inner-container {
+            position: absolute;
+            top:-100px;
+            left: 330px;
+            text-align: center;
+            width: 1180px;
+            padding: 0;
+
+            .wrapper{
+                position: relative;
+                width: 98%;
+                margin: auto;
+            }
+
+            img:nth-child(odd){
+                height: 140px;
+                width: 140px;
+                margin-right: 80px;
+                margin-left: 80px;
+                padding-bottom: 30px;
+                
+            }
+            img:nth-child(2){
+                height: 200px;
+                width: 200px;
+            }
+        }
+        p,h5{
+            text-align: center;
+            width: 800px;
+            margin: 20px 180px;
+            color: #FFFFFF;
+            
+        }
+        p{
+            font-size: 18px;
+            font-style: italic;
+            line-height: 38px;
+            letter-spacing: 0.5px;
+            font-weight: 100;
+        }
+        h5{
+            font-size: 16px;
+            text-transform: uppercase;
+        }
+        
+    }
 }
+
 #news{
-    height: 600px;
-    margin-top: 50vh;
+    height: 500px;
     font-family: "Ubuntu", Helvetica, Arial, sans-serif;
     
     .wrapper{
@@ -576,6 +618,7 @@ nav{
             font-size: 45px;
             text-align: center;
             font-weight: 600;
+            margin: 50px;
         }
         .news-container{
             display: flex;
@@ -585,30 +628,192 @@ nav{
             .box{
                 width: 250px;
                 height: 300px;
+                border: 0.2px solid #BDBDBD;
 
                 img{
                     height: 180px;
                     width: 250px;
+                    border: none;
                 }
                 .headline{
-                    margin: 0 10px;
+                    margin: 13px;
                     font-weight: 700;
                     font-size: 18px;
                     letter-spacing: 0.7px;
                     line-height: 1.5rem;
+                    transition: .3s ease-in-out;
+                }
+                .headline:hover{
+                    color: #8BC03F;
+                    cursor:pointer;
+                }
+                .details{
+                    display: flex;
+                    font-size: 11px;
+                    margin: 10px 13px;
+                    text-transform: uppercase;
 
+                    .date, span{
+                        color: #BDBDBD;
+                    }
+                    .date{
+                        border-right: 1px solid #bdbdbd;
+                        padding-right: 20px;
+                        margin-right: 20px;
+                    }
+                    .writer{
+                        color: #8BC03F;
+                    }
+                    .writer:hover{
+                        color: #77a52f;
+                        cursor: pointer;
+                    }
                 }
             }
         }
     }
 }
+.last-part {
+    height: 300px;
+    font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+    color: #FFFFFF;
+    background-color: #1E3953;
+    padding: 50px 0 0 0;
 
-@media(max-width: 1100px){
     .wrapper{
-        max-width: 900px;
+        width: 98%;
+        display: flex;
+        justify-content: space-between;
+
+        h4{
+            text-transform: uppercase;
+            font-size: 17px;
+            font-weight: 700;
+        }
+
+        .section{
+            width: 300px;
+        }
+        .first{
+
+            p{
+                 font-size: 15px;
+                 line-height: 30px;
+                 color: #496A8A;
+            }
+            
+            .icons{
+                font-size: 18px;
+                font-weight: 500;
+
+                i:nth-child(1){
+                    color: #93C83F;
+                    font-size: 20px;
+                    margin-right: 5px;
+                }
+                i:nth-child(n+2){
+                    color: #FFFFFF;
+                    background-color: #2E5275;
+                    border-radius: 3px;
+                    padding: 7px 7px;
+                    font-size: 14px;
+                    box-sizing: border-box;
+                    transition: 0.3s ease-in-out;
+                    margin-left: 4px;
+                }
+                i:nth-child(2){
+                    margin-left: 10px;
+                }
+                i:nth-child(n+2):hover{
+                    cursor: pointer;
+                    background-color: #93C83F;
+                }
+            }
+        }
+        .second{
+            display: flex;
+            flex-direction: row;
+            font-size: 15px;
+            justify-content: space-between;
+
+            h4{
+                margin-bottom: 30px;
+            }
+            span{
+                color: #93C83F;
+                margin-right: 20px;
+                transition: .3s ease-in-out;
+            }
+            p{
+                margin-bottom: 25px;
+            }
+            p:hover span{
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+            p:hover{
+                color: #93C83F;
+                cursor: pointer;
+            }
+            .right{
+                margin-top: 55px;
+                margin-left: 50px;
+            }
+            
+        }
+        .third{
+            p{
+                font-size: 15px;
+                line-height: 30px;
+                color: #496A8A;
+            }
+        }
     }
-    header{
-        .details{
+
+}
+footer{
+    background-color: #1e354a;
+    margin: 0 auto;
+    text-align: center;
+    padding: 15px 0;
+    font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+
+    p{
+        color: #496A8A;
+        font-size: 15px;
+        padding: 0;
+        margin: 0;
+    }
+}
+
+
+@media (max-width: 1200px){
+    body{
+        overflow-x: hidden;
+    }
+    .wrapper{
+        width: 98%
+    }
+    .home{
+        .wrapper{
+            text-align: center;
+        }
+    }
+    #news{
+        height: 800px;
+        display: block;
+        .news-container{
+            padding: 10px;
+            display: none;
+            
+            .box{
+                width: 400px;
+                height: 400px;
+                padding: 50px;
+            }
+            .third, .fourth{
+
+            }
         }
     }
 }
